<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tip_percentage">tip percentage</string>
    <string name="check">check</string>
    <string name="tip">tip</string>
    <string name="total">total</string>
    <string name="dollar_amount">$%1$.02f</string>
    <string name="enter_location">Enter location</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="load">load</string>
</resources>